# image-to-palette-rust

./: .gitignore  Cargo.toml  readme.md
src/: image_tools.rs  main.rs
