[package]
name = "image-to-palette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
hex_color = "2.0.0"
image = "0.24.6"
reqwest = {version = "0.11.18", features = ["blocking"]}
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
